--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "@kennyromanov/paris",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A Module Federating Tool (Alpha)",
   "keywords": ["microfrontends", "module federation", "module federation on vue", "alpha version"],
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/src/index.d.ts",
   "exports": {
-    "import": "./dist/index.js",
-    "require": "./dist/index.cjs"
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
+      "types": "./dist/types.d.ts"
+    }
   },
   "scripts": {
     "build:types": "tsc && tsc-alias",
@@ -25,15 +28,10 @@
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-typescript": "^7.26.0",
-    "@handlebars/parser": "^2.2.0",
-    "@types/minimist": "^1.2.5",
     "@types/node": "^22.14.0",
     "esbuild": "^0.25.6",
     "esbuild-plugin-import-glob": "^0.1.1",
     "tsc-alias": "^1.8.11",
     "typescript": "^5.8.2"
-  },
-  "dependencies": {
-    "handlebars": "^4.7.8"
   }
 }
