--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "types": "dist/src/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/types.d.ts",
       "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/types.d.ts"
+      "require": "./dist/index.cjs"
     }
   },
   "scripts": {
